// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildList process a list of tiles for rendering using config options { startX: 100, startY: 100 } 1`] = `
Object {
  "height": 904.1489073928212,
  "tiles": Array [
    Object {
      "angle": 0,
      "id": "id-0",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-0",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 100,
      "y": 100,
    },
    Object {
      "angle": 0,
      "id": "id-1",
      "model": CurvedTileEnlargedModel {
        "direction": "right",
        "id": "id-1",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 105,
      "y": 210,
    },
    Object {
      "angle": 0,
      "id": "id-2",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-2",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 105,
      "y": 310,
    },
    Object {
      "angle": -22.5,
      "id": "id-3",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-3",
        "ratio": 2,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 92.00735091368512,
      "y": 427.22075445642906,
    },
    Object {
      "angle": -15,
      "id": "id-4",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-4",
        "ratio": 3,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 94.54813220625093,
      "y": 582.3738986229511,
    },
    Object {
      "angle": -11.25,
      "id": "id-5",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-5",
        "ratio": 4,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 95.86883528669455,
      "y": 745.1502949496767,
    },
  ],
  "width": 150,
  "x": 0,
  "y": 0,
}
`;

exports[`buildList process a list of tiles for rendering using config options { startX: 100, startY: 100, tileAngle: 45, vertical: true } 1`] = `
Object {
  "height": 928.9198397621083,
  "tiles": Array [
    Object {
      "angle": 45,
      "id": "id-0",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-0",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 138.8908729652601,
      "y": 131.81980515339464,
    },
    Object {
      "angle": 45,
      "id": "id-1",
      "model": CurvedTileEnlargedModel {
        "direction": "right",
        "id": "id-1",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 138.8908729652601,
      "y": 273.2411613907041,
    },
    Object {
      "angle": 45,
      "id": "id-2",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-2",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 138.8908729652601,
      "y": 388.9518395093589,
    },
    Object {
      "angle": 22.5,
      "id": "id-3",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-3",
        "ratio": 2,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 132.47176600877182,
      "y": 467.28172100052785,
    },
    Object {
      "angle": 30,
      "id": "id-4",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-4",
        "ratio": 3,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 142.09292143521043,
      "y": 620.6536564876583,
    },
    Object {
      "angle": 33.75,
      "id": "id-5",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-5",
        "ratio": 4,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 146.90289447810034,
      "y": 785.2824461845607,
    },
  ],
  "width": 184.31902703171488,
  "x": 0,
  "y": 0,
}
`;

exports[`buildList process a list of tiles for rendering using config options { tileAngle: 45 } 1`] = `
Object {
  "height": 828.9198397621083,
  "tiles": Array [
    Object {
      "angle": 45,
      "id": "id-0",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-0",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 38.8908729652601,
      "y": 31.819805153394636,
    },
    Object {
      "angle": 45,
      "id": "id-1",
      "model": CurvedTileEnlargedModel {
        "direction": "right",
        "id": "id-1",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 38.8908729652601,
      "y": 173.24116139070415,
    },
    Object {
      "angle": 45,
      "id": "id-2",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-2",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 38.8908729652601,
      "y": 288.9518395093589,
    },
    Object {
      "angle": 22.5,
      "id": "id-3",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-3",
        "ratio": 2,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 32.47176600877182,
      "y": 367.28172100052785,
    },
    Object {
      "angle": 30,
      "id": "id-4",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-4",
        "ratio": 3,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 42.09292143521043,
      "y": 520.6536564876582,
    },
    Object {
      "angle": 33.75,
      "id": "id-5",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-5",
        "ratio": 4,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 46.90289447810032,
      "y": 685.2824461845607,
    },
  ],
  "width": 168.63805406342973,
  "x": -84.31902703171487,
  "y": 0,
}
`;

exports[`buildList process a list of tiles for rendering using config options { vertical: false } 1`] = `
Object {
  "height": 167.7776769338703,
  "tiles": Array [
    Object {
      "angle": 0,
      "id": "id-0",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-0",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 45,
      "y": -55,
    },
    Object {
      "angle": 0,
      "id": "id-1",
      "model": CurvedTileEnlargedModel {
        "direction": "right",
        "id": "id-1",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 145,
      "y": -50,
    },
    Object {
      "angle": 0,
      "id": "id-2",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-2",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 245,
      "y": -50,
    },
    Object {
      "angle": -22.5,
      "id": "id-3",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-3",
        "ratio": 2,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 331.5745789630079,
      "y": -63.142766340239795,
    },
    Object {
      "angle": -15,
      "id": "id-4",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-4",
        "ratio": 3,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 432.60111828165367,
      "y": -71.17523740319321,
    },
    Object {
      "angle": -11.25,
      "id": "id-5",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-5",
        "ratio": 4,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 531.1068536703053,
      "y": -75.10977397620938,
    },
  ],
  "width": 583.5045207150616,
  "x": 0,
  "y": -83.88883846693516,
}
`;

exports[`buildList process a list of tiles for rendering using config options { vertical: true } 1`] = `
Object {
  "height": 804.1489073928213,
  "tiles": Array [
    Object {
      "angle": 0,
      "id": "id-0",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-0",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 0,
      "y": 0,
    },
    Object {
      "angle": 0,
      "id": "id-1",
      "model": CurvedTileEnlargedModel {
        "direction": "right",
        "id": "id-1",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 5,
      "y": 110,
    },
    Object {
      "angle": 0,
      "id": "id-2",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-2",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 5,
      "y": 210,
    },
    Object {
      "angle": -22.5,
      "id": "id-3",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-3",
        "ratio": 2,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": -7.992649086314891,
      "y": 327.22075445642906,
    },
    Object {
      "angle": -15,
      "id": "id-4",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-4",
        "ratio": 3,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": -5.4518677937490665,
      "y": 482.3738986229511,
    },
    Object {
      "angle": -11.25,
      "id": "id-5",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-5",
        "ratio": 4,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": -4.131164713305445,
      "y": 645.1502949496768,
    },
  ],
  "width": 100,
  "x": -50,
  "y": 0,
}
`;

exports[`buildList process a list of tiles for rendering using config options {} 1`] = `
Object {
  "height": 804.1489073928213,
  "tiles": Array [
    Object {
      "angle": 0,
      "id": "id-0",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-0",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 0,
      "y": 0,
    },
    Object {
      "angle": 0,
      "id": "id-1",
      "model": CurvedTileEnlargedModel {
        "direction": "right",
        "id": "id-1",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 5,
      "y": 110,
    },
    Object {
      "angle": 0,
      "id": "id-2",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-2",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 5,
      "y": 210,
    },
    Object {
      "angle": -22.5,
      "id": "id-3",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-3",
        "ratio": 2,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": -7.992649086314891,
      "y": 327.22075445642906,
    },
    Object {
      "angle": -15,
      "id": "id-4",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-4",
        "ratio": 3,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": -5.4518677937490665,
      "y": 482.3738986229511,
    },
    Object {
      "angle": -11.25,
      "id": "id-5",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-5",
        "ratio": 4,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": -4.131164713305445,
      "y": 645.1502949496768,
    },
  ],
  "width": 100,
  "x": -50,
  "y": 0,
}
`;

exports[`buildList process a list of tiles for rendering using default position 1`] = `
Object {
  "height": 804.1489073928213,
  "tiles": Array [
    Object {
      "angle": 0,
      "id": "id-0",
      "model": StraightTileModel {
        "direction": "right",
        "id": "id-0",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 0,
      "y": 0,
    },
    Object {
      "angle": 0,
      "id": "id-1",
      "model": CurvedTileEnlargedModel {
        "direction": "right",
        "id": "id-1",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 5,
      "y": 110,
    },
    Object {
      "angle": 0,
      "id": "id-2",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-2",
        "ratio": 1,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": 5,
      "y": 210,
    },
    Object {
      "angle": -22.5,
      "id": "id-3",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-3",
        "ratio": 2,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": -7.992649086314891,
      "y": 327.22075445642906,
    },
    Object {
      "angle": -15,
      "id": "id-4",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-4",
        "ratio": 3,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": -5.4518677937490665,
      "y": 482.3738986229511,
    },
    Object {
      "angle": -11.25,
      "id": "id-5",
      "model": CurvedTileModel {
        "direction": "right",
        "id": "id-5",
        "ratio": 4,
        "specs": TileSpecifications {
          "barrierChunks": 4,
          "barrierWidth": 5,
          "laneWidth": 80,
        },
      },
      "x": -4.131164713305445,
      "y": 645.1502949496768,
    },
  ],
  "width": 100,
  "x": -50,
  "y": 0,
}
`;
